--- a/lessons/kareem.html
+++ b/lessons/kareem.html
@@ -46,16 +46,16 @@
         <a class="pointer" href="../editor/#450648344683aae5489eb8cab990b070" target="_blank">
           <i class="fa fa-edit"></i>
         </a>
-        <a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
+        <a class="share-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//michaelsboost.github.io/ArabEngo/" target="_blank">
           <i class="fa fa-facebook"></i>
         </a>
-        <a class="share-twitter" href="https://twitter.com/home?status=Learn%20%23Arabic%20for%20%23English%20Speakers%20with%20%23ArabEngo%20%23ArabEngoChat%20-%20http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
+        <a class="share-twitter" href="https://twitter.com/home?status=Learn%20%23Arabic%20for%20%23English%20Speakers%20with%20%23ArabEngo%20%23ArabEngoChat%20-%20http%3A//michaelsboost.github.io/ArabEngo/" target="_blank">
           <i class="fa fa-twitter"></i>
         </a>
-        <a class="share-gplus" href="https://plus.google.com/share?url=http%3A//mikethedj4.github.io/ArabEngo/" target="_blank">
+        <a class="share-gplus" href="https://plus.google.com/share?url=http%3A//michaelsboost.github.io/ArabEngo/" target="_blank">
           <i class="fa fa-google-plus"></i>
         </a>
-        <a class="share-linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//mikethedj4.github.io/ArabEngo/&title=Learn%20%23Arabic%20for%20%23English%20Speakers%20with%20%23ArabEngo%20%23ArabEngoChat&summary=&source=" target="_blank">
+        <a class="share-linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//michaelsboost.github.io/ArabEngo/&title=Learn%20%23Arabic%20for%20%23English%20Speakers%20with%20%23ArabEngo%20%23ArabEngoChat&summary=&source=" target="_blank">
           <i class="fa fa-linkedin-square"></i>
         </a>
       </div>
@@ -195,7 +195,7 @@
           </h4>
 
           <h1 class="uk-nav-header">Bio</h1>
-          <p>This is a beginner sample chat made by <a href="http://mikethedj4.github.io/">Michael Schwartz</a>.</p> <p>Enjoy!</p>
+          <p>This is a beginner sample chat made by <a href="http://michaelsboost.github.io/">Michael Schwartz</a>.</p> <p>Enjoy!</p>
           
           <div class="donatebtns">
             <a href="https://cash.me/$michaelsboost" target="_blank">
