--- a/lessons/basics1/index.html
+++ b/lessons/basics1/index.html
@@ -27,7 +27,7 @@
 
           <p class="lesson-preview">مرحبا | اهلا | مع السلامه | رجل | امراه | ولد | بنت | انا</p>
 
-          <a class="btn--default gotolesson" href="https://mikethedj4.github.io/ArabEngo/lessons/#649018ff4afb9c0ba367b12585ec5362">start</a>
+          <a class="btn--default gotolesson" href="https://michaelsboost.github.io/ArabEngo/lessons/#649018ff4afb9c0ba367b12585ec5362">start</a>
         </div>
       </span>
       
@@ -35,7 +35,7 @@
         <h2>Lesson 2 / 2</h2>
 
         <div style="font-size: 70px; margin: auto auto 19px auto; height: 93px;">
-          <a class="pointer" href="../../community.html"">
+          <a class="pointer" href="../../community.html" target="_blank">
             <i class="fa fa-comment"></i>
           </a>
         </div>
@@ -44,7 +44,7 @@
 
         <p></p>
 
-        <a class="btn--default pointer gotolesson" href="../../community.html">chat now</a>
+        <a class="btn--default pointer gotolesson" href="../../community.html" target="_blank">chat now</a>
       </div>
     </div>
     
